--- a/index.html
+++ b/index.html
@@ -20,34 +20,68 @@
     <a href="havre.html">Havre</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <div class="container">
-  <main>
-    <div class="main-text">
-      <h2>Welcome to Montana - Big Sky Country</h2>
-      <br>
-      <p>Montana is a landlocked state in the mountain west region of the United States and is the 43rd most populated
-        state while being the 4th largest state in the union. Montana first came under American sovereignty with the
-        Louisiana Purchase from France in 1803 and entered statehood on November 8th, 1889. If you are interested in
-        more information about Montana, please visit <a
-          href="https://mt.gov/discover/brief_history">https://mt.gov/discover/brief_history</a>.</p>
-    </div>
 
-    <div class="img-container">
-      <img id="bscImg" src="./img/IMG_6914.webp" alt="Montana Img">
-    </div>
-  </main>
-  <aside>
-    <h2>Facts about MT</h2>
-    <br>
-    <ul>
-      <li>41st State</li>
-      <li>Population: 1,137,233</li>
-      <li>Capital City: Helena</li>
-    </ul>
-  </aside>
-</div>
+  <div class="container">
+    <main>
+      <div class="main-text">
+        <h2>Welcome to Montana - Big Sky Country</h2>
+        <br>
+        <p>Montana is a landlocked state in the mountain west region of the United States and is the 43rd most populated
+          state while being the 4th largest state in the union. Montana first came under American sovereignty with the
+          Louisiana Purchase from France in 1803 and entered statehood on November 8th, 1889. If you are interested in
+          more information about Montana, please visit <a
+            href="https://mt.gov/discover/brief_history" target="_blank">Montana Brief History</a>.</p>
+      </div>
+
+      <div class="img-container">
+        <img id="bscImg" src="./img/IMG_6914.webp" alt="Montana Img">
+      </div>
+
+      <!-- New Table -->
+      <div class="table-container">
+        <h2>Montana Historic Places</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Location</th>
+              <th>Year Built</th>
+              <th>Name of the Place</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Butte</td>
+              <td>1964</td>
+              <td>Historic District</td>
+            </tr>
+            <tr>
+              <td>Great Falls</td>
+              <td>1896</td>
+              <td>C. M. Russell Museum</td>
+            </tr>
+            <tr>
+              <td>Havre</td>
+              <td>1904</td>
+              <td>Fort Assinniboine</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+
+    <aside>
+      <h2>Facts about MT</h2>
+      <br>
+      <ul>
+        <li>41st State</li>
+        <li>Population: 1,137,233</li>
+        <li>Capital City: Helena</li>
+      </ul>
+    </aside>
+  </div>
+
   <footer>
-    <p>&copy; 2025 Skyler Kroll</p>
+    <p>&copy; 2025 State of Montana</p>
   </footer>
 </body>
 
