--- a/helena.html
+++ b/helena.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home</title>
+  <title>Helena</title>
   <link rel="stylesheet" href="/index.css" />
 </head>
 
@@ -47,7 +47,7 @@
     </aside>
   </div>
   <footer>
-    <p>&copy; 2025 Skyler Kroll</p>
+    <p>&copy; 2025 State of Montana</p>
   </footer>
 </body>
 
