--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Montana State</h1>
+    <h1 style="font-family: sans-serif;">Montana State</h1>
   </header>
 
   <nav>
