--- a/contact.html
+++ b/contact.html
@@ -6,59 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us</title>
   <link rel="stylesheet" href="/index.css" />
-  <style>
-    /* Contact page specific styles */
-    #contact-title {
-      float: left;
-      width: 40%;
-      padding: 2rem;
-      background: #fafafa;
-    }
-
-    .contact-form {
-      float: right;
-      width: 55%;
-      padding: 2rem;
-      background: #f2f2f2;
-    }
-
-    .contact-form label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-
-    .contact-form input,
-    .contact-form textarea {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .contact-form button {
-      margin-top: 1.5rem;
-      padding: 0.75rem 1.5rem;
-      background: #81a8b7;
-      color: white;
-      border: none;
-      border-radius: 1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .contact-form button:hover {
-      background: #5d7f8a;
-    }
-
-    /* Clear floats */
-    .clearfix::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-  </style>
+  <script src="./script.js" defer></script>
 </head>
 
 <body>
