Updated to coincide with CSS changes so footer renders at bottom.

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <a href="contact.html" class="active">Contact</a>
   </nav>
 
-  <div class="clearfix">
+  <main class="clearfix">
     <h1 id="contact-title">Contact Us</h1>
 
     <div class="contact-form">
@@ -45,7 +45,7 @@
         <button type="submit">Submit</button>
       </form>
     </div>
-  </div>
+</main>
 
   <footer>
     <p>&copy; 2025 State of Montana</p>
